# kenzieStarter

./: .gitignore  manage.py  pyproject.toml  requirements.txt
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
creators/: serializers.py  urls.py  views.py
creators/migrations/: 0001_initial.py
kenzieStarter/: asgi.py  settings.py  urls.py  wsgi.py
locations/: models.py  urls.py  views.py
locations/migrations/: 0001_initial.py
projects/: filters.py  models.py  serializers.py  urls.py  views.py
projects/management/commands/: seed.py  seeds.py
projects/migrations/: 0001_initial.py  0002_auto_20210618_0301.py  0002_project_state_changed_at.py
